--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ a {
 body {
     color: #333;
     font-size: 15px;
-    font-family: 'Pretendard-Regular';
+	font-family: 'Pretendard', system-ui, -apple-system, 'Segoe UI', Roboto, 'Noto Sans KR', 'Apple SD Gothic Neo', sans-serif;
+	
 }
 
 #wrap {
@@ -24,10 +25,12 @@ body {
 }
 
 @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    /* font-weight: 400; */
-    font-style: normal;
+  font-family: 'Pretendard';
+  src: url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/woff2/Pretendard-Variable.woff2')
+       format('woff2-variations');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
 }
 
 #top_wrap {
@@ -1139,6 +1142,7 @@ input{    margin-top: 130.5px;
     padding-top: 28px;
 
 }
+
 
 
 
